# nesBoy

./: CMakeLists.txt  bus.cpp  bus.h  cpu.cpp  cpu.h  main.cpp  ppu.cpp  ppu.h  rom_loader.cpp  rom_loader.h  windows_gui.cpp
rusty/nesBoy/: Cargo.toml  README.md  ff.nes
rusty/nesBoy/src/: add_register.rs  bus.rs  controller_register.rs  cpu.rs  main.rs  ppu.rs  rom_loader.rs
